publish: Link to Joinup website
generated from commit 648f1df0b4278301e0c6c8ff3e4a5750d00bfe7b

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo-829d989f.png" class="logo" alt="" />
+      <a href="https://joinup.es"><img src="images/logo-829d989f.png" class="logo" alt="" /></a>
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
               <a href="#" data-language-name="python">python</a>
@@ -462,6 +462,7 @@
           </li>
       </ul>
         <ul class="toc-footer">
+            <li><a href='https://joinup.es'>Joinup website</a></li>
             <li><a href='mailto:desarrollo@joinup.es'>Contact to get the credentials</a></li>
             <li><a href='https://github.com/we-are-Joinup/provider-api-doc'>Source code of the documentation</a></li>
             <li><a href='https://github.com/slatedocs/slate'>Documentation Powered by Slate</a></li>
