publish: Remove error code
generated from commit c167095af2ecf1ef3bafa48894e43e4323cc6f84

--- a/index.html
+++ b/index.html
@@ -422,18 +422,6 @@
           </li>
           <li>
             <a href="#11-places" class="toc-h1 toc-link" data-title="11. Places">11. Places</a>
-          </li>
-          <li>
-            <a href="#note-original-query-string-below-it-seems-impossible-to-parse-and" class="toc-h1 toc-link" data-title="Note: original query string below. It seems impossible to parse and">Note: original query string below. It seems impossible to parse and</a>
-          </li>
-          <li>
-            <a href="#reproduce-query-strings-100-accurately-so-the-one-below-is-given" class="toc-h1 toc-link" data-title="reproduce query strings 100% accurately so the one below is given">reproduce query strings 100% accurately so the one below is given</a>
-          </li>
-          <li>
-            <a href="#in-case-the-reproduced-version-is-not-quot-correct-quot" class="toc-h1 toc-link" data-title="in case the reproduced version is not "correct".">in case the reproduced version is not "correct".</a>
-          </li>
-          <li>
-            <a href="#response-requests-get-39-https-api-joinupbackend-api-corporative-provider-slug-apps-passenger-platform-version-places-type-railstation-amp-position-3-681477-40-398396-39-headers-headers" class="toc-h1 toc-link" data-title="response = requests.get('https://api.joinupbackend/api/corporative-PROVIDER-SLUG/apps/passenger/PLATFORM/VERSION/places/?type=railstation&amp;position=-3.681477,40.398396', headers=headers)">response = requests.get('https://api.joinupbackend/api/corporative-PROVIDER-SLUG/apps/passenger/PLATFORM/VERSION/places/?type=railstation&amp;position=-3.681477,40.398396', headers=headers)</a>
               <ul class="toc-list-h2">
                   <li>
                     <a href="#11-1-http-request" class="toc-h2 toc-link" data-title="11.1 HTTP Request">11.1 HTTP Request</a>
@@ -3325,7 +3313,7 @@ curl <span class="s2">"https://api.joinupbackend/api/corporative-PROVIDER-SLUG/a
         <span class="nc">System</span><span class="o">.</span><span class="na">out</span><span class="o">.</span><span class="na">println</span><span class="o">(</span><span class="n">response</span><span class="o">);</span>
     <span class="o">}</span>
 <span class="o">}</span>
-</code></pre></div><h1 id='note-original-query-string-below-it-seems-impossible-to-parse-and'>Note: original query string below. It seems impossible to parse and</h1><h1 id='reproduce-query-strings-100-accurately-so-the-one-below-is-given'>reproduce query strings 100% accurately so the one below is given</h1><h1 id='in-case-the-reproduced-version-is-not-quot-correct-quot'>in case the reproduced version is not &quot;correct&quot;.</h1><h1 id='response-requests-get-39-https-api-joinupbackend-api-corporative-provider-slug-apps-passenger-platform-version-places-type-railstation-amp-position-3-681477-40-398396-39-headers-headers'>response = requests.get(&#39;https://api.joinupbackend/api/corporative-PROVIDER-SLUG/apps/passenger/PLATFORM/VERSION/places/?type=railstation&amp;position=-3.681477,40.398396&#39;, headers=headers)</h1>
+</code></pre></div>
 <blockquote>
 <p>The above command returns JSON structured like this:</p>
 </blockquote>
