--- a/index.html
+++ b/index.html
@@ -490,31 +490,31 @@
 
 <p><strong>Welcome</strong> to the <strong>API Documentation for Joinup Providers</strong>!</p>
 
-<p>You can use our API to request Joinups (taxis, VTCs and motorcycles) using our API endpoints.</p>
+<p>Our API allows you to request Joinups (taxis, VTCs and motorcycles) using our API endpoints.</p>
 
-<p>We have language bindings in Shell, Python &amp; Java, but you can use any programming language (Python, Java, Ruby, Javascript, etc). You can find code examples in the right dark area.</p>
+<p>We have language bindings in Shell, Python &amp; Java, but it is up to you to use any programming language (Python, Java, Ruby, Javascript, etc). You will find code examples in the right dark area.</p>
 </div><div class='content integrations'><h1 id='2-integration-types'>2. Integration types</h1>
 <p>You can integrate with us in several ways. In this documentation, we will focus on Server to server integration, but you must know that you can connect with us from client to server. In client to server integration the endpoints are the same, almost everything is the same, but for example the <a href="./#5-authentication-authorization-amp-impersonate">AAI</a> (Authentication and authorization infrastructure) is different or we don&#39;t need an own <a href="./#13-push-notifications">push system</a>.</p>
 <h2 id='2-1-client-to-server'>2.1 Client to server</h2>
-<p>You can choose between two ways:</p>
+<p>The client can be done in two ways, you can choose between one of them:</p>
 
-<p>- Own development. You can create a Web or App and connect with this API</p>
+<p>- Own development. You can implement web or/and app and connect with this API, yourself</p>
 
-<p>- We can clone our web or/and our app for you with several customizations. We can do it very quickly :-)</p>
+<p>- We create a clone web or/and app with several customization for you. We have already done it several times and will do it like a shot :-)</p>
 <h2 id='2-2-server-to-server'>2.2 Server to server</h2><h3 id='2-2-1-where-to-start'>2.2.1 Where to start?</h3>
 <p>There are several endpoints in this documentation, but there is only one mandatory endpoint: <a href="./#10-1-create-service">Create Service</a>. But if do you want do an integration more rich we have another endpoints to use</p>
 
-<p>By importance, the next endpoint is to <a href="./#10-5-cancel">Cancel service</a>. It is not mandatory, but it is very recommended if you want to cancel a service after request.</p>
+<p>Following the importance of creating a service will be <a href="./#10-5-cancel">Cancel service</a>. It is not required, but recommended, for error corrections or cancel service after the request</p>
 
-<p>If your services may be modified after request them, so you should be use <a href="./#10-2-edit">Edit service</a></p>
+<p>If your services need to be modified, then you should use the <a href="./#10-2-edit">Edit service</a> endpoint</p>
 
 <p>You can use a generic user for the integration or you can use a specific user for every request. So, if you want to request a service to <code>John Smith</code>, you will create (<a href="./#6-signup">signup</a>) a user for <code>John Smith</code> in our system the first time, and after it you will create a service in our system. If <code>John Smith</code> wants another service, you do not have to create a user the next time. See more info in <a href="./#5-authentication-authorization-amp-impersonate">AAI</a> section.</p>
 
-<p>To track services we recommend to use <a href="./#10-3-current">Current endpoint</a>. Although we enable <a href="./#13-push-notifications">push notifications</a>, polling is highly recommended. We recommend you to call to this endpoint every 30 seconds or one time per minute for good feedback about your services.</p>
+<p>To track the active services we recommend the <a href="./#10-3-current">Current endpoint</a>. Although we have enable <a href="./#13-push-notifications">push notifications</a>, polling is highly recommended. We recommend you to call to this endpoint every 30 seconds or one time per minute will be enough for a good feedback of the current services.</p>
 <h3 id='2-2-2-where-to-continue'>2.2.2 Where to continue?</h3>
-<p>If you want to go deeper into the integration. We recommend you to use <a href="./#9-zone">Zone</a>. Every zone has a configuration. The configuration is not the same in a big city than in a little city or a town, in the downtown of a city than in the suburbs of a city, in an airport than in another airport</p>
+<p>For a deeper integration the <a href="./#9-zone">Zone</a> endpoint is a good point to follow. Every zone has a different  configuration. The configuration is not the same in a big city than in a little city or a town, in the downtown of a city than in the suburbs of a city, in an airport than in another airport...</p>
 
-<p>With <a href="./#9-zone">Zone endpoint</a>, you can knows the available taxi types (conventionals, six seats, ecos, electrics, high-ends, adapteds, etc), if you can request an immediate service, if there is cost cancellation in this zone, if destination is required, min time to request a reservation, etc</p>
+<p>With <a href="./#9-zone">Zone endpoint</a>, you can knows the available taxi types (conventionals, six seats, ecos, electrics, high-ends, adapteds, etc), if you can request an immediate service, if there is cost cancellation, if destination is required, min time to request a reservation, etc</p>
 
 <p>But if you want to request only conventional taxis, and you can request them within a reasonable time... Really, this endpoint is not necessary</p>
 
@@ -522,13 +522,13 @@
 
 <p>If you do not choose the generic user option and your users can change his/her data: first name, last name, phone or even gender. So, you should use <a href="./#8-2-edit-profile">Edit profile</a></p>
 
-<p>For good feedback. Please, you should use <a href="./#10-6-vote-optional">Vote endpoint</a>. If we do not know what we&#39;re doing wrong, we won&#39;t be able to improve for you :-)</p>
+<p>To allow us to improve our system, we need feedback. With <a href="./#10-6-vote-optional">Vote endpoint</a> we will be notified. If we do not know what we&#39;re doing wrong, we won&#39;t be able to improve for you :-)</p>
 <h3 id='2-2-3-other-endpoints'>2.2.3 Other endpoints</h3>
 <p>If you have a solution where endusers signup, so it is possible that you want to use <a href="./#7-validates">Validates endpoints</a></p>
 
 <p>We have documented: <a href="./#10-4-services">Services</a> e.g.: to synchronize one time per day (e.g.: a taxi driver was wrong for an amount, and we can update it after finishing the service). <a href="./#8-1-get-profile">Get Profile</a> if you want to get the data we have about a user or <a href="./#12-address">Address</a> to save the favorite addresses of the users (e.g.: home, work, etc)</p>
 
-<p>Also, we have about 20 endpoints undocumented more. So, if you need something, please <a href="mailto:integrations@joinup.es">contact us</a> because it is very possible that we have developed it.</p>
+<p>We still have about 20 endpoints undocumented. So, if you need something, please <a href="mailto:integrations@joinup.es">contact us</a> because it is very probably that we have developed it.</p>
 
 <!-- Link section -->
 </div><div class='content urls'><h1 id='3-urls'>3. URLs</h1>
@@ -546,7 +546,7 @@
 </thead><tbody>
 <tr>
 <td>PROVIDER-SLUG</td>
-<td>Identificator of your system in our URL path. You can choose it</td>
+<td>Identifier of your system in our URL path. You can choose it</td>
 </tr>
 <tr>
 <td>PLATFORM</td>
@@ -815,7 +815,7 @@ You must replace <code>foo.bar@example.com</code> with username (email) or phone
 </span></code></pre></div><h2 id='6-1-http-request'>6.1 HTTP Request</h2>
 <p><code>POST https://api.joinupbackend/api/corporative-PROVIDER-SLUG/apps/passenger/PLATFORM/VERSION/signup/</code></p>
 
-<p>This endpoint creates a new passenger, a new user. If you want to use only <a href="./#2-2-server-to-server">a generic user</a> you should do not use this endpoint</p>
+<p>This endpoint creates a new passenger, a new user, for <a href="./#2-2-server-to-server">a generic user</a> skip this endpoint</p>
 <h2 id='6-2-signup-attributes-data'>6.2 Signup attributes data</h2>
 <table><thead>
 <tr>
