publish: Update documentation
generated from commit 34f0fa9a77d07ef2e9d66752873f33694e13612f

--- a/index.html
+++ b/index.html
@@ -1265,6 +1265,10 @@ In addition to these fields there are undocumented employee/company fields.
 <td>can_impersonate</td>
 <td>Undocumented field</td>
 </tr>
+<tr>
+<td>employee</td>
+<td>Undocumented field</td>
+</tr>
 </tbody></table>
 
 <aside class="notice">
@@ -2737,6 +2741,7 @@ In addition to these fields there are undocumented employee/company fields and c
         </span><span class="p">],</span><span class="w">
         </span><span class="nl">"destination_address"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Calle de Fernando el Católico, 42 Madrid España"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"taxi_pickup_date"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
+        </span><span class="nl">"test_service"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="p">,</span><span class="w">
         </span><span class="nl">"finish_date"</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
         </span><span class="nl">"flight_number"</span><span class="p">:</span><span class="w"> </span><span class="s2">""</span><span class="p">,</span><span class="w">
         </span><span class="nl">"flight_origin"</span><span class="p">:</span><span class="w"> </span><span class="s2">""</span><span class="p">,</span><span class="w">
@@ -2957,6 +2962,10 @@ In addition to these fields there are undocumented employee/company fields
 <tr>
 <td>relaunched</td>
 <td>Service id of the new relaunched service</td>
+</tr>
+<tr>
+<td>test_service</td>
+<td>Undocumented field</td>
 </tr>
 <tr>
 <td>vehicle_type</td>
